syntax = "proto3";

package api;

message Product {
  string productId = 1;
}

message Invoice {
  string clientId = 1;
  Product p = 2;
  int32 number = 3;
}

message InvoiceNumber {
  string number = 1;
}

message SalesVolume {
  float volume = 1;
}

message String {
  string s = 1;
}

message Null {};

service InvoiceService {
  rpc findInvoiceById(InvoiceNumber) returns (Invoice) {}
  rpc createInvoice(Invoice) returns (Null) {}
}

service ProductService {
  rpc getVolumeOfSales(Product) returns (SalesVolume) {}
}

